--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -3055,10 +3055,10 @@
         "class Operation():\n",
         "  def __init__(self):\n",
         "    pass\n",
-        "  def simplify(self):\n",
-        "    return self\n",
         "  def eval(self, inputs):\n",
         "    return None\n",
+        "  def simplify(self):\n",
+        "    return self\n",
         "  def __eq__(self, o: object) -> bool:\n",
         "    return type(self) == type(o)\n",
         "  def __ne__(self, o: object) -> bool:\n",
@@ -3160,7 +3160,7 @@
         "    super().__init__(left, right)\n",
         "    ll, lr = left.rng\n",
         "    rl, rr = right.rng\n",
-        "    self.rng = (ll if ll>0 and lr<=rr else 0, lr if ll>0 and lr<=rr else rr-1)  # assume positive right operands (in facts it's always 26)\n",
+        "    self.rng = (ll if ll>0 and lr<=rr else 0, lr if ll>0 and lr<=rr else rr-1)  # assume positive right operands (in fact it's always 26)\n",
         "  def eval(self, inputs):\n",
         "    return self.left.eval(inputs) % self.right.eval(inputs)\n",
         "  def simplify(self):\n",
@@ -3181,6 +3181,10 @@
         "  def simplify(self):\n",
         "    l = self.left.simplify()\n",
         "    r = self.right.simplify()\n",
+        "    # simplification of eql is possible for constants (direct evaluation);\n",
+        "    # we can check if the value ranges of left and right do not intersect,\n",
+        "    # in which case the result is always 0 (not equal);\n",
+        "    # we can simplify eql(eql(l, r), 0) to neq(l, r)\n",
         "    return (Constant(1) if l.left == r.left else Constant(0)) if type(l) is Constant and type(r) is Constant \\\n",
         "      else Constant(0) if l.rng[1] <= r.rng[0] or r.rng[1] <= l.rng[0] \\\n",
         "      else Neq(l.left, l.right) if type(l) is Eql and r == Constant(0) \\\n",
@@ -3195,6 +3199,8 @@
         "    self.rng = (0, 2)\n",
         "  def eval(self, inputs):\n",
         "    return 0 if self.left.eval(inputs) == self.right.eval(inputs) else 1\n",
+        "  # skip simplify() as neq is already the simplification of eql(eql(l, r), 0)\n",
+        "  # and there are no other combinations with eql in the input\n",
         "  def __repr__(self) -> str:\n",
         "    return f\"(0 if {self.left} == {self.right} else 1)\"  \n",
         "\n",
@@ -3218,7 +3224,10 @@
         "  return registers[op_str] if op_str in \"wxyz\" else Constant(int(op_str))\n",
         "\n",
         "import re\n",
-        "program = [tuple([g for g in re.fullmatch('(inp|add|mul|div|mod|eql) (w|x|y|z) ?(w|x|y|z|-?[0-9]+)?', line.strip()).groups()]) for line in open('drive/MyDrive/AoC/2021/input24.txt')]\n",
+        "program = [tuple([g for g in re.fullmatch('(inp|add|mul|div|mod|eql) (w|x|y|z) ?(w|x|y|z|-?[0-9]+)?', line.strip()).groups()]) \n",
+        "           for line in open('drive/MyDrive/AoC/2021/input24.txt')]\n",
+        "\n",
+        "# 1 parse into trees of operations and simplify\n",
         "\n",
         "registers = {\n",
         "  'w': Constant(0),\n",
@@ -3251,9 +3260,7 @@
         "  elif cmd == 'eql':\n",
         "    registers[left] = Eql(registers[left], parse_operand(right, registers)).simplify()\n",
         "\n",
-        "  # print(cmd, left, right, registers[left].rng)\n",
-        "\n",
-        "# print out the z caching nodes\n",
+        "# 2 print out the z caching nodes\n",
         "for z in zs:\n",
         "  print(z, z.operation) \n",
         "\n",
@@ -3314,9 +3321,9 @@
           "height": 435
         },
         "id": "IPeAQ8B5aewd",
-        "outputId": "08dbe478-c697-4c12-c93c-3e12a2f7405f"
+        "outputId": "3129efc9-6ae5-4756-966b-7d25a460339e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3358,7 +3365,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 49
         }
       ]
     },
@@ -3380,7 +3387,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMJcs9BWji0D+8VHSJgH8Xh",
+      "authorship_tag": "ABX9TyN7UFPHdBS9I0RwpqetlL5A",
       "include_colab_link": true
     },
     "kernelspec": {
