--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -3184,7 +3184,8 @@
         "    # simplification of eql is possible for constants (direct evaluation);\n",
         "    # we can check if the value ranges of left and right do not intersect,\n",
         "    # in which case the result is always 0 (not equal);\n",
-        "    # we can simplify eql(eql(l, r), 0) to neq(l, r)\n",
+        "    # we can simplify eql(eql(l, r), 0) to neq(l, r), \n",
+        "    # there are no other combinations with eql in the input\n",
         "    return (Constant(1) if l.left == r.left else Constant(0)) if type(l) is Constant and type(r) is Constant \\\n",
         "      else Constant(0) if l.rng[1] <= r.rng[0] or r.rng[1] <= l.rng[0] \\\n",
         "      else Neq(l.left, l.right) if type(l) is Eql and r == Constant(0) \\\n",
@@ -3295,35 +3296,35 @@
         "    v = zs[13].eval(inputs)\n",
         "    return inputs if v == 0 else last_0\n",
         "  l = last_0\n",
-        "  t = None\n",
+        "  fixed_input = None\n",
         "  if depth == 1:\n",
         "    # progress\n",
         "    print(inputs)\n",
         "  if depth in fixed_input_deltas:\n",
         "    # the z(depth-1) % 26 + X\n",
-        "    t = zs[depth-1].eval(inputs) % 26 + fixed_input_deltas[depth]\n",
-        "  if not t:\n",
+        "    fixed_input = zs[depth-1].eval(inputs) % 26 + fixed_input_deltas[depth]\n",
+        "  if not fixed_input:\n",
         "    for i in range(1, 10):  # part 1, increase, last_0 is max input producing 0\n",
         "    # for i in range(9, 0, -1):  # part 2, decrease, last_0 is min input producing 0\n",
         "      l = iterate(inputs + [i], depth + 1, l)\n",
         "      zs[depth].evict()\n",
-        "  elif t > 0 and t < 10:\n",
-        "    # input digits must be in [1..9]\n",
-        "    l = iterate(inputs + [t], depth + 1, l)\n",
+        "  elif fixed_input > 0 and fixed_input < 10:\n",
+        "    # input digits must be in [1..9],\n",
+        "    l = iterate(inputs + [fixed_input], depth + 1, l)\n",
         "    zs[depth].evict()\n",
         "  return l\n",
         "      \n",
-        "\"\".join([str(d) for d in iterate([], 0, 0)])\n"
+        "\"\".join([str(d) for d in iterate([], 0, [])])\n"
       ],
       "metadata": {
+        "id": "IPeAQ8B5aewd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 435
         },
-        "id": "IPeAQ8B5aewd",
-        "outputId": "3129efc9-6ae5-4756-966b-7d25a460339e"
+        "outputId": "775a4814-7980-4b2b-df5c-a3a645e0bb2a"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -3365,7 +3366,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 50
         }
       ]
     },
@@ -3387,7 +3388,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyN7UFPHdBS9I0RwpqetlL5A",
+      "authorship_tag": "ABX9TyP7XtEC+Pf0Tr3vLXx2xZIC",
       "include_colab_link": true
     },
     "kernelspec": {
