--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -3287,21 +3287,20 @@
         "# - each z value depends only on the preceding z value and the current input\n",
         "# - for some z values, there is a condition for the current input, related to \n",
         "#   the previous z value, which, if fulfilled, leads to smaller numbers\n",
-        "#   => prev_z % 26 + X == current input, so we make those inputs constant\n",
+        "#   => prev_z % 26 + <constant> == current input, so we make those inputs constant\n",
         "#   => the following dict has the X for each affected depth (0-based input number)\n",
         "fixed_input_deltas = {3: -8, 6: -11, 8: -3, 10: -3, 11: -1, 12: -10, 13: -16}\n",
         "\n",
         "def iterate(inputs, depth, last_0):\n",
         "  if depth == 14:\n",
-        "    v = zs[13].eval(inputs)\n",
-        "    return inputs if v == 0 else last_0\n",
+        "    return inputs if zs[13].eval(inputs) == 0 else last_0\n",
         "  l = last_0\n",
         "  fixed_input = None\n",
         "  if depth == 1:\n",
         "    # progress\n",
         "    print(inputs)\n",
         "  if depth in fixed_input_deltas:\n",
-        "    # the z(depth-1) % 26 + X\n",
+        "    # the z(depth-1) % 26 + <constant>\n",
         "    fixed_input = zs[depth-1].eval(inputs) % 26 + fixed_input_deltas[depth]\n",
         "  if not fixed_input:\n",
         "    for i in range(1, 10):  # part 1, increase, last_0 is max input producing 0\n",
@@ -3309,7 +3308,7 @@
         "      l = iterate(inputs + [i], depth + 1, l)\n",
         "      zs[depth].evict()\n",
         "  elif fixed_input > 0 and fixed_input < 10:\n",
-        "    # input digits must be in [1..9],\n",
+        "    # input digits must be in [1..9]\n",
         "    l = iterate(inputs + [fixed_input], depth + 1, l)\n",
         "    zs[depth].evict()\n",
         "  return l\n",
@@ -3388,7 +3387,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyP7XtEC+Pf0Tr3vLXx2xZIC",
+      "authorship_tag": "ABX9TyMaCuVqGL7sghm+Mvo76zkQ",
       "include_colab_link": true
     },
     "kernelspec": {
