--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -3091,7 +3091,7 @@
         "  def __repr__(self) -> str:\n",
         "    return f\"input{self.left}\"\n",
         "\n",
-        "class BinOperation(UnaryOperation):\n",
+        "class BinaryOperation(UnaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left)\n",
         "    self.right = right\n",
@@ -3100,7 +3100,7 @@
         "  def __ne__(self, o: object) -> bool:\n",
         "    return type(self) != type(o) or self.left != o.left or self.right != o.right\n",
         "\n",
-        "class Add(BinOperation):\n",
+        "class Add(BinaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left, right)\n",
         "    ll, lr = left.rng\n",
@@ -3118,7 +3118,7 @@
         "  def __repr__(self) -> str:\n",
         "    return f\"({self.left} + {self.right})\"\n",
         "\n",
-        "class Mul(BinOperation):\n",
+        "class Mul(BinaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left, right)\n",
         "    ll, lr = left.rng\n",
@@ -3137,7 +3137,7 @@
         "  def __repr__(self) -> str:\n",
         "    return f\"({self.left} * {self.right})\"\n",
         "\n",
-        "class Div(BinOperation):\n",
+        "class Div(BinaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left, right)\n",
         "    ll, lr = left.rng\n",
@@ -3155,7 +3155,7 @@
         "  def __repr__(self) -> str:\n",
         "    return f\"({self.left} / {self.right})\"\n",
         "\n",
-        "class Mod(BinOperation):\n",
+        "class Mod(BinaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left, right)\n",
         "    ll, lr = left.rng\n",
@@ -3172,7 +3172,7 @@
         "  def __repr__(self) -> str:\n",
         "    return f\"({self.left} % {self.right})\"  \n",
         "\n",
-        "class Eql(BinOperation):\n",
+        "class Eql(BinaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left, right)\n",
         "    self.rng = (0, 2)\n",
@@ -3194,7 +3194,7 @@
         "  def __repr__(self) -> str:\n",
         "    return f\"(1 if {self.left} == {self.right} else 0)\"  \n",
         "\n",
-        "class Neq(BinOperation):\n",
+        "class Neq(BinaryOperation):\n",
         "  def __init__(self, left, right):\n",
         "    super().__init__(left, right)\n",
         "    self.rng = (0, 2)\n",
@@ -3321,9 +3321,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 435
         },
-        "outputId": "775a4814-7980-4b2b-df5c-a3a645e0bb2a"
+        "outputId": "c4ef2478-6f28-461a-f706-358d78ab5ada"
       },
-      "execution_count": 50,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -3365,7 +3365,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 2
         }
       ]
     },
@@ -3387,7 +3387,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMaCuVqGL7sghm+Mvo76zkQ",
+      "authorship_tag": "ABX9TyPK52gQN6/qu5xwYYp5WzoE",
       "include_colab_link": true
     },
     "kernelspec": {
