--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -3287,8 +3287,8 @@
         "# - each z value depends only on the preceding z value and the current input\n",
         "# - for some z values, there is a condition for the current input, related to \n",
         "#   the previous z value, which, if fulfilled, leads to smaller numbers\n",
-        "#   => prev_z % 26 + <constant> == current input, so we make those inputs constant\n",
-        "#   => the following dict has the X for each affected depth (0-based input number)\n",
+        "#   => prev_z % 26 + <constant> == current input, so we fix those inputs.\n",
+        "#   => the following dict has the <constant> for each affected depth (0-based input number)\n",
         "fixed_input_deltas = {3: -8, 6: -11, 8: -3, 10: -3, 11: -1, 12: -10, 13: -16}\n",
         "\n",
         "def iterate(inputs, depth, last_0):\n",
@@ -3387,7 +3387,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPK52gQN6/qu5xwYYp5WzoE",
+      "authorship_tag": "ABX9TyNL1LZL1/Z3sA6nTFt0wIox",
       "include_colab_link": true
     },
     "kernelspec": {
