--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -3395,6 +3395,7 @@
         "def step(grid):\n",
         "  # east\n",
         "  g = [['>' if row[(x-1)%w] == '>' and cell == '.' else '.' if cell == '>' and row[(x+1)%w] == '.' else cell for x, cell in enumerate(row)] for row in grid]\n",
+        "  # down\n",
         "  g = [['v' if g[(y-1)%h][x] == 'v' and cell == '.' else '.' if cell == 'v' and g[(y+1)%h][x] == '.' else cell for x, cell in enumerate(row)] for y, row in enumerate(g)]\n",
         "  return g\n",
         "\n",
@@ -3581,7 +3582,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMv4VN5arVTkgV+OtqP8x3a",
+      "authorship_tag": "ABX9TyN7RurKZPs8Gr/iB5SgfUHx",
       "include_colab_link": true
     },
     "kernelspec": {
