--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1833,18 +1833,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zOEaSByKUlxD",
-        "outputId": "66593774-ed3b-4846-9ac5-0a0ce9e3eb1d"
+        "outputId": "c54b1193-fb4f-4d8e-acdc-a433fa3e318c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "scans: 36\n",
             "part 1, number of beacons: 408\n",
@@ -1983,7 +1983,7 @@
         "    scans.append(scan) \n",
         "  \n",
         "print(\"part 1, number of beacons:\", len(merged))\n",
-        "print(\"part 2, max Manhattan distance between scanners:\", max(sum([abs(d) for d in s1-s2]) for i, s1 in enumerate(scanners) for j, s2 in enumerate(scanners) if j>i))"
+        "print(\"part 2, max Manhattan distance between scanners:\", max(sum(abs(d) for d in s1-s2) for i, s1 in enumerate(scanners) for j, s2 in enumerate(scanners) if j>i))"
       ]
     },
     {
@@ -3582,7 +3582,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyN7RurKZPs8Gr/iB5SgfUHx",
+      "authorship_tag": "ABX9TyP5cLsnvPfyFGwERFy9ECMx",
       "include_colab_link": true
     },
     "kernelspec": {
