--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -569,18 +569,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VSIcdkV88Z3A",
-        "outputId": "b61110db-fd53-4e73-e2b0-0285a5723301"
+        "outputId": "6f593df3-fd03-495d-f7c5-352551ba1e13"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "part 1: 539\n",
             "part 2: 1084606\n"
@@ -668,7 +668,7 @@
         "  seg_e = s_diff(seg_eg, seg_g)\n",
         "  mapping[seg_e] = 'e'\n",
         "  # 9 f = \"6\" / len 6 which has only one of the segments of \"1\" (cf) - segments a,b,d,e,g\n",
-        "  seg_f = reduce(lambda p, seg: s_diff(p, seg), \n",
+        "  seg_f = reduce(s_diff, \n",
         "                 [seg_a, seg_b, seg_d, seg_e, seg_g], \n",
         "                 [p for p in len6_069 if len(s_inter(p, len2_1_cf)) == 1][0])\n",
         "  mapping[seg_f] = 'f'\n",
@@ -1833,7 +1833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3418,7 +3418,7 @@
         "id": "aJmsyHukm7sI",
         "outputId": "bd424d1f-9f7f-445a-8684-faac0092a39b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3582,7 +3582,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyP5cLsnvPfyFGwERFy9ECMx",
+      "authorship_tag": "ABX9TyMJ+xF0ro4PD99hua8y3gjt",
       "include_colab_link": true
     },
     "kernelspec": {
