--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyNzQRMbUQuB1n2Jh0lvKJii",
+      "authorship_tag": "ABX9TyNUAYPzey+9cgVf41zeV/8w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,16 +82,16 @@
         "l = [i[0] for i in input]\n",
         "r = [i[1] for i in input]\n",
         "r_counts = Counter(r)\n",
-        "sum([l[i] * r_counts[l[i]] for i in range(n)])"
+        "sum([e * r_counts[e] for e in l])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MTWKPqpv-Olj",
-        "outputId": "4453c07f-bb60-40c3-f97b-242955ae73e6"
+        "outputId": "615a9e84-a532-496f-944f-07677f099f64"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +101,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 22
         }
       ]
     }
