use zip and pattern matching (decomposition)

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyNUAYPzey+9cgVf41zeV/8w",
+      "authorship_tag": "ABX9TyPn4iPmX9vkM0hbJida6Hxp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,19 +40,16 @@
       "cell_type": "code",
       "source": [
         "input = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input01.txt')]\n",
-        "n = len(input)\n",
-        "l = sorted([i[0] for i in input])\n",
-        "r = sorted([i[1] for i in input])\n",
-        "sum([abs(l[i] - r[i]) for i in range(n)])"
+        "sum([abs(l - r) for (l, r) in zip(sorted([l for (l, _) in input]), sorted([r for (_, r) in input]))])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "owxfIRB-73TW",
-        "outputId": "309d5173-04c2-41c7-b5d9-850923db77a7"
+        "outputId": "7a050ccf-ff1c-48a1-d16e-dc08b6fd82fb"
       },
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -62,7 +59,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 28
         }
       ]
     },
@@ -79,19 +76,17 @@
       "cell_type": "code",
       "source": [
         "from collections import Counter\n",
-        "l = [i[0] for i in input]\n",
-        "r = [i[1] for i in input]\n",
-        "r_counts = Counter(r)\n",
-        "sum([e * r_counts[e] for e in l])"
+        "r_counts = Counter([r for (_, r) in input])\n",
+        "sum([l * r_counts[l] for (l, _) in input])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MTWKPqpv-Olj",
-        "outputId": "615a9e84-a532-496f-944f-07677f099f64"
+        "outputId": "ee21c9c6-d7d4-4909-8a89-0a56bf776755"
       },
-      "execution_count": 22,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +96,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 29
         }
       ]
     }
