--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyPn4iPmX9vkM0hbJida6Hxp",
+      "authorship_tag": "ABX9TyOvqO9X4aOHNh4nxaeibqlj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Day 01, input"
+      ],
+      "metadata": {
+        "id": "r1TPXsFIHvfH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input01.txt')]"
+      ],
+      "metadata": {
+        "id": "SKku640EHqzU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Day 01, part 1, sum of absolute diff of sorted list elements"
       ],
       "metadata": {
@@ -39,7 +59,6 @@
     {
       "cell_type": "code",
       "source": [
-        "input = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input01.txt')]\n",
         "sum([abs(l - r) for (l, r) in zip(sorted([l for (l, _) in input]), sorted([r for (_, r) in input]))])"
       ],
       "metadata": {
@@ -49,7 +68,7 @@
         "id": "owxfIRB-73TW",
         "outputId": "7a050ccf-ff1c-48a1-d16e-dc08b6fd82fb"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,7 +85,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Day 01, part2, sum lhs elements multiplied by frequency in rhs list"
+        "Day 01, part 2, sum lhs elements multiplied by frequency in rhs list"
       ],
       "metadata": {
         "id": "CdcLpLnV_PML"
@@ -86,7 +105,7 @@
         "id": "MTWKPqpv-Olj",
         "outputId": "ee21c9c6-d7d4-4909-8a89-0a56bf776755"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,6 +118,151 @@
           "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 02, input"
+      ],
+      "metadata": {
+        "id": "1L9Nb_rMHT9g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input02.txt')]"
+      ],
+      "metadata": {
+        "id": "XFpAAU_dHRO1"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 02, part 1, part 1, determine (all increasing or all decreasing) and deltas < 4"
+      ],
+      "metadata": {
+        "id": "mvPBjJnKIIBp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "deltas = [[line[n+1] - line[n] for n in range(len(line)-1)] for line in input]"
+      ],
+      "metadata": {
+        "id": "9xFCJ3oVH9nX"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def same_sgn(deltas_line):\n",
+        "  return all([deltas_line[i] * deltas_line[i+1] > 0 for i in range(len(deltas_line)-1)])"
+      ],
+      "metadata": {
+        "id": "di6wBoYIIkvG"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def delta_max(deltas_line, m):\n",
+        "  return all([abs(d) <= m for d in deltas_line])"
+      ],
+      "metadata": {
+        "id": "pqb9kf6-I4Rk"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum([1 if same_sgn(deltas_line) and delta_max(deltas_line, 3) else 0 for deltas_line in deltas])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uChLkyXjJu4Q",
+        "outputId": "1686cbc1-44c3-4abf-e3a7-3bd4e1e0c5a1"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "359"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 02, part 2, allow removal of any single element"
+      ],
+      "metadata": {
+        "id": "pyqz85jtYXCG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def check_line(line):\n",
+        "  deltas = [line[n+1] - line[n] for n in range(len(line)-1)]\n",
+        "  return same_sgn(deltas) and delta_max(deltas, 3)\n",
+        "\n",
+        "def remove1(line):\n",
+        "  return [line[:i] + line[i+1:] for i in range(len(line))]\n",
+        "\n",
+        "# part 1 regression\n",
+        "sum([1 if check_line(line) else 0 for line in input])\n",
+        "\n",
+        "# part 2\n",
+        "sum([1 if check_line(line) or any([check_line(r) for r in remove1(line)]) else 0 for line in input])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F_RiahZiKqp7",
+        "outputId": "dd8d867c-98ac-46ee-f750-898a31000621"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "418"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rqCaAmMaZVeQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
