--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyOvqO9X4aOHNh4nxaeibqlj",
+      "authorship_tag": "ABX9TyOqND3whgtj/Wx4pRILqJcp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "XFpAAU_dHRO1"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "9xFCJ3oVH9nX"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "di6wBoYIIkvG"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "pqb9kf6-I4Rk"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
         "id": "uChLkyXjJu4Q",
         "outputId": "1686cbc1-44c3-4abf-e3a7-3bd4e1e0c5a1"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
         "id": "F_RiahZiKqp7",
         "outputId": "dd8d867c-98ac-46ee-f750-898a31000621"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,10 +259,145 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rqCaAmMaZVeQ"
+        "id": "rqCaAmMaZVeQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f5a0f82-81e1-4484-b22d-76bf39da6b38"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "datetime.date(5, 12, 30)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 03, input"
+      ],
+      "metadata": {
+        "id": "j-Ni1FCRkrMk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "input = reduce(lambda s1, s2: s1 + s2, [line for line in open('drive/MyDrive/AoC/2024/input03.txt')], '')"
+      ],
+      "metadata": {
+        "id": "GFPJR9oEgR9g"
+      },
+      "execution_count": 90,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 03, part 1, find mul(x,y) sequences, multiply and add"
+      ],
+      "metadata": {
+        "id": "ctTUKUfAlLvJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def find_mul_and_eval(split):\n",
+        "  matches = re.findall(r\"mul\\((\\d+),(\\d+)\\)\", split)\n",
+        "  return sum([int(x) * int(y) for (x, y) in matches])"
+      ],
+      "metadata": {
+        "id": "Vhwgw70512ue"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input = \"xmul(2,4)%&mul[3,7]!@^do_not_mul(5,5)+mul(32,64]then(mul(11,8)mul(8,5))\"\n",
+        "find_mul_and_eval(input)"
+      ],
+      "metadata": {
+        "id": "GXsh1v2Mk07N",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9300308-93d8-4b2a-cac1-a7480577c6ee"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "162813399"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 03, part 2, evaluate do() and don't() sequences"
+      ],
+      "metadata": {
+        "id": "M3oaKPP2nPmU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def next_state(state, split):\n",
+        "  (sum, is_active) = state\n",
+        "  match split:\n",
+        "    case \"do()\":\n",
+        "      return (sum, True)\n",
+        "    case \"don't()\":\n",
+        "      return (sum, False)\n",
+        "    case _:\n",
+        "      return (sum + (find_mul_and_eval(split) if is_active else 0), is_active)\n",
+        "\n",
+        "# input = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"\n",
+        "reduce(next_state, re.split(\"(do\\(\\)|don't\\(\\))\", input), (0, True))[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IloCNlgql80L",
+        "outputId": "e66f6724-6897-49d6-8d43-fc17f8a019be"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "53783319"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
     }
   ]
 }
