--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyOqND3whgtj/Wx4pRILqJcp",
+      "authorship_tag": "ABX9TyOVh8y2v41Wtu86KAAK4pCa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -315,13 +315,13 @@
         "import re\n",
         "\n",
         "def find_mul_and_eval(split):\n",
-        "  matches = re.findall(r\"mul\\((\\d+),(\\d+)\\)\", split)\n",
+        "  matches = re.findall(\"mul\\((\\d+),(\\d+)\\)\", split)\n",
         "  return sum([int(x) * int(y) for (x, y) in matches])"
       ],
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 91,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -335,9 +335,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f9300308-93d8-4b2a-cac1-a7480577c6ee"
+        "outputId": "33a0d4bd-151b-40ef-b30b-d716d5fe7686"
       },
-      "execution_count": 92,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 96
         }
       ]
     },
@@ -383,9 +383,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IloCNlgql80L",
-        "outputId": "e66f6724-6897-49d6-8d43-fc17f8a019be"
+        "outputId": "beb03d60-6753-4ba8-9730-2e3c1e2b1878"
       },
-      "execution_count": 94,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 97
         }
       ]
     }
