Simplify concat of lines read from file

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyOVh8y2v41Wtu86KAAK4pCa",
+      "authorship_tag": "ABX9TyNAAEi04g/2AzXfE1tHLSMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,13 +291,12 @@
     {
       "cell_type": "code",
       "source": [
-        "from functools import reduce\n",
-        "input = reduce(lambda s1, s2: s1 + s2, [line for line in open('drive/MyDrive/AoC/2024/input03.txt')], '')"
+        "input = \"\".join([line for line in open('drive/MyDrive/AoC/2024/input03.txt')])"
       ],
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": 90,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -321,7 +320,7 @@
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 95,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -335,9 +334,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "33a0d4bd-151b-40ef-b30b-d716d5fe7686"
+        "outputId": "9e6253ee-910f-4e36-9ca6-3561bf6ae84f"
       },
-      "execution_count": 96,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +346,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 102
         }
       ]
     },
@@ -383,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IloCNlgql80L",
-        "outputId": "beb03d60-6753-4ba8-9730-2e3c1e2b1878"
+        "outputId": "01db97bd-49b3-4a61-ece7-0a3d88ed9864"
       },
-      "execution_count": 97,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 97
+          "execution_count": 103
         }
       ]
     }
